--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -97,9 +97,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "Python 3.8.5 64-bit ('wooks': conda)",
+   "display_name": "Python 3.8.5 64-bit ('wooks': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "34ccf250dd9f59845cda544a9f3c398fdd108a19df155de3563c7c039e182d07"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -111,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
